--- a/fake_test.html
+++ b/fake_test.html
@@ -8,7 +8,7 @@
   <meta property="og:description" content="Xem ngay tin tức cực sốc!" />
   <meta property="og:image" content="https://ibb.co/PZDPvCML" />
   <meta property="og:type" content="website" />
-  <meta http-equiv="refresh" content="0; url=https://docbao.com" />
+  <meta http-equiv="refresh" content="0; url=https://vnexpress.net/" />
 </head>
 <body>
   <p>Đang chuyển hướng...</p>
